update project pages

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ title: Jamie Kwan | Experience Design
                        </div>
                    </a>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item digital">
+                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item digital passion">
                    <a href="projects/curiosityinfocus">
                        <img src="assets/projects/curiosityinfocus.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
@@ -87,7 +87,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item passion">
-                   <a href="projects/studiobud">
+                   <a href="http://www.studiobud.ca" target="_blank">
                        <img src="assets/projects/studiobud2.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>Studio&nbsp;Bud</span></h5>
@@ -95,7 +95,7 @@ title: Jamie Kwan | Experience Design
                        </div>
                    </a>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item passion architectural">
+                <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item architectural">
                    <a href="projects/china-study">
                        <img src="assets/projects/china-study.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
@@ -148,7 +148,7 @@ title: Jamie Kwan | Experience Design
                            <p>Concept Design</p>
                        </div>
                    </a>
-                </div>
+                </div>j
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item architectural">
                    <a href="projects/george-condo">
                        <img src="assets/projects/george-condo.jpg" alt="" class="img-responsive">
