--- a/projects/george-condo.html
+++ b/projects/george-condo.html
@@ -1,58 +1,40 @@
 ---
 layout: portfolio
-title: Gardens on George St
-heading: "Conceptual Design for an Urban Mid-Rise Condo"
-info: "Optimizing Urban Views, Urban Sightlines, and Urban Streetlife."
-extra: 
-featureimage_url: "../assets/images/projects/george-condo.jpg"
-
-challenge: "Design a mid-rise condominium on a street known for street violence and a lack of walkability."
-
-solution: "By shaping the architecture to open up sightlines, and providing open, public space flexible to many uses, the proposed building activates the street's corner as both a gateway and community hub. The street's block and grid prevent views around the corner, ultimately making the site feel unsafe and uneasy: the inclusion of a new public library and indoor-outdoor restaurant/cafe aid in generating activity and adding meaning to the community. The proposed building form effectively balances community interest with creating market-ready and affordable units"
+title: Gardens on George Street
+featureimg: george-condo
+slogan: "Optimizing Urban Views, Urban Sightlines, and Urban Streetlife."
+oneliner: "Conceptual Design for an Urban Mid-Rise Condo"
+challenge: "Design a mid-rise condominium on a street known for street violence and a lack of a safe pedestrian throughfare."
 
 images:
-  - image_path: ../assets/images/projects/george-condo/2.jpg
+  - image_path: ../assets/projects/george-condo/2.jpg
     title: George St Condo
-  - image_path: ../assets/images/projects/george-condo/4.jpg
+  - image_path: ../assets/projects/george-condo/4.jpg
     title: George St Condo
-  - image_path: ../assets/images/projects/george-condo/3.jpg
+  - image_path: ../assets/projects/george-condo/3.jpg
     title: George St Condo
-  - image_path: ../assets/images/projects/george-condo/6.jpg
+  - image_path: ../assets/projects/george-condo/6.jpg
     title: George St Condo
-  - image_path: ../assets/images/projects/george-condo/7.jpg
+  - image_path: ../assets/projects/george-condo/7.jpg
     title: George St Condo
-  - image_path: ../assets/images/projects/george-condo/5.jpg
+  - image_path: ../assets/projects/george-condo/5.jpg
     title: George St Condo
-  - image_path: ../assets/images/projects/george-condo/8.jpg
+  - image_path: ../assets/projects/george-condo/8.jpg
     title: George St Condo
-  - image_path: ../assets/images/projects/george-condo/10.jpg
+  - image_path: ../assets/projects/george-condo/10.jpg
     title: George St Condo
 
+category: "Concept Design"
+client: 
+date: "January - April 2012"
+team: 
 ---
+<div class="col-md-8">
+  <p>The Dundas-Sherbourne neighbourhood is often overlooked and neglected by the city. One of the most crime-ridden areas in the GTA, the Dundas-Sherbourne neighbourhood has become a transition zone between developing urban communities; where homeless shelters, strip clubs and social services are inevitably grouped into. George Street is currently in a static position - poor and uninviting gateways at both Dundas and Gerrard create a lack of circulation and activity, effectively disconnecting the street from the neighbourhood core. </p>
 
-<p>The Dundas-Sherbourne neighbourhood is often overlooked and neglected by the city. One of the most crime-ridden areas in the GTA, the Dundas-Sherbourne neighbourhood has become a transition zone between developing urban communities; where homeless shelters, strip clubs and social services are inevitably grouped into. George Street is currently in a static position - poor and uninviting gateways at both Dundas and Gerrard create a lack of circulation and activity, effectively disconnecting the street from the neighbourhood core. </p>
+  <p><img src="../assets/projects/george-condo/5.jpg" alt="George St Condo" class="img-responsive"/></p>
 
-<p><img src="../assets/images/projects/george-condo/5.jpg" alt="George St Condo" class="img-responsive"/></p>
+  <p>The project analysed the potential and feasibility of residential development in the neglected urban space. Through the manipulation of different program volumes, intersecting one another and responding to existing datum lines along the street, the design attempts to open up the George-Dundas gateway and reconnect the street to the neighbourhood core, while creating an area for community interaction for Dundas-Sherbourne.</p>
 
-<p>The project analysed the potential and feasibility of residential development in the neglected urban space. Through the manipulation of different program volumes, intersecting one another and responding to existing datum lines along the street, the design attempts to open up the George-Dundas gateway and reconnect the street to the neighbourhood core, while creating an area for community interaction for Dundas-Sherbourne.</p>
-
-<div class="row">
-	<hr>
-	{% for image in page.images %}
-	<div class="col-md-3 col-sm-6 col-xl-3">
-		<a href="{{ image.image_path }}" data-lightbox="george-condo">
-		<img src="{{ image.image_path }}" alt="{{ image.title }}" class="sm-img img-responsive"/>
-		</a>
-	</div>
-	{% endfor %}
-</div>
-
-<hr>
-
-<div class="text-muted">
-  <p><span class="detail">Project Details</span></p>
-	<ul>
-		<li>Course: 3rd Year Integration Studio (2011-2012), Ryerson University</li>
-		<li>Software: Rhino (w. VRay), AutoCAD, Photoshop, Illustrator</li>
-	</ul>
+  <p>By shaping the architecture to open up sightlines, and providing open, public space flexible to many uses, the proposed building activates the street's corner as both a gateway and community hub. The street's block and grid prevent views around the corner, ultimately making the site feel unsafe and uneasy: the inclusion of a new public library and indoor-outdoor restaurant/cafe aid in generating activity and adding meaning to the community. The proposed building form effectively balances community interest with creating market-ready and affordable units.</p>
 </div>
