--- a/projects/sandbox.html
+++ b/projects/sandbox.html
@@ -1,53 +1,30 @@
 ---
 layout: portfolio
 title: Augmented Reality Sandbox
-heading: "Early Exploration in Tangible Interfaces."
-info: "Research Project in Bridging Physical and Digital Interfaces."
-extra: 
-featureimage_url: "../assets/images/projects/sandbox.jpg"
-
+featureimg: sandbox
+slogan: "Early Exploration in Tangible Interfaces."
+oneliner: "How do semantic interactions within educational installations support learning?"
 challenge: "Explore the impact of sensory and tangible interactions on STEM learning."
 
-solution: "The Augmented Reality (AR) Sandbox was collaboratively built as part of the Master of Digital Media program, for the purposes of imagining three future applications: (1) city planning and urban data visualization; (2) gaming; and (3) museum installation."
-
 images:
-  - image_path: ../assets/images/projects/sandbox/6.jpg
+  - image_path: ../assets/projects/sandbox/6.jpg
     title: AR Sandbox
-  - image_path: ../assets/images/projects/sandbox/5.jpg
+  - image_path: ../assets/projects/sandbox/5.jpg
     title: AR Sandbox
-  - image_path: ../assets/images/projects/sandbox/2.jpg
+  - image_path: ../assets/projects/sandbox/2.jpg
     title: AR Sandbox
-  - image_path: ../assets/images/projects/sandbox/1.jpg
+  - image_path: ../assets/projects/sandbox/1.jpg
     title: AR Sandbox
-  - image_path: ../assets/images/projects/sandbox/7.jpg
+  - image_path: ../assets/projects/sandbox/7.jpg
     title: AR Sandbox
 
+category: "Research (Master of Digital Media)"
+client:
+date: "April 2015"
+team: "Josh Clavir, Diana Ibranovic"
 ---
-
+<div class="col-md-8">
 <p>Originally conceived by Hiroshii Ishii out of the MIT Media Lab in 2002, and then made open-sourced by <a href="http://idav.ucdavis.edu/~okreylos/" target="_blank">Oliver Kreylos' lab</a> at UC Davis. Real-time topography is generated from the sand's surface, and projected directly onto the white children's sand — becoming a live, three-dimensional topographic map. We built this tabletop interface with the open-sourced data and software, as a pre-curser to adapting the system to applications in transmedia storytelling, tangible gaming, and visualizing urban community development potential. Referenced as part of my Masters research project, it was built as a means of observing embodied interactions within a STEM learning context, in an effort to understand how to similarly design for a cultural history application.</p>
 
 <p>This demo is on-display in the Ryerson University Digital Media Experience Lab in addition to off-site locations such as the Royal Ontario Museum and TIFF digiPlaySpace. We hoped to build the foundations for future graduate students to pursue research and development using the Sandbox as a platform in the MDM program.</p>
-
-<div class="row">
-	<hr>
-	{% for image in page.images %}
-	<div class="col-md-3 col-sm-6 col-xl-3">
-		<a href="{{ image.image_path }}" data-lightbox="sandbox">
-		<img src="{{ image.image_path }}" alt="{{ image.title }}" class="sm-img img-responsive"/>
-		</a>
-	</div>
-	{% endfor %}
-</div>
-
-<hr>
-
-<div class="text-muted">
-	<p><span class="detail">Project Details</span></p>
-	<ul>
-		<li>Team: J.CLAVIR, D.IBRANOVIC</li>
-		<li><a href="http://idav.ucdavis.edu/~okreylos/">Oliver Kreylos Open-Sourced Code</a></li>
-		<li>Project funded by the Ryerson <a href="http://www.ryerson.ca/graduate/digitalmedia">Master of Digital Media program</a>.</li>
-		<li>Installation at TIFF digiPlayspace completed in collaboration with Nick Pagee.</li>
-		<li><a href="https://vimeo.com/130944069">Video</a> (Credit: Ryerson DME)</li>
-	</ul>
 </div>
