--- a/projects/wild-for-bees.html
+++ b/projects/wild-for-bees.html
@@ -1,74 +1,46 @@
 ---
 layout: portfolio
 title: Wild for Bees
-heading: "Solitary Bee Habitats Made Simply and Sustainably"
-info: "An Educational Initiative for Native and Urban Pollinators"
-extra: 
-featureimage_url: "../assets/images/projects/bee-hotel/6.JPG"
-
+featureimg: bee-hotel
+slogan: "An Educational Initiative for Native and Urban Pollinators."
+oneliner: "The design of the 5 bee hotels aims at creating location-specific artistic gestures that inspire DIY efforts using urban waste. Just like native wild bees – as opposed to honey bees – we created pieces that could be built by the general public, while adding aesthetic value to key locations across the GTA."
 challenge: "For the inaugural year, design and construct five wild bee hotels as part of a national campaign to support pollinator health."
 
-solution: "The design of the 5 bee hotels aims at creating location-specific artistic gestures that inspire DIY efforts using urban waste. Just like native wild bees – as opposed to honey bees – we created pieces that could be built by the general public, while adding aesthetic value to key locations across the GTA."
-
-client: Fairmont Hotel and Resorts, Pollinator Partnership Canada, and Burt's Bees
- 
 images:
-  - image_path: ../assets/images/projects/bee-hotel/3.jpg
+  - image_path: ../assets/projects/bee-hotel/3.jpg
     title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/4.jpg
+  - image_path: ../assets/projects/bee-hotel/4.jpg
     title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/5.JPG
+  - image_path: ../assets/projects/bee-hotel/5.JPG
     title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/9.JPG
+  - image_path: ../assets/projects/bee-hotel/9.JPG
     title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/6.JPG
+  - image_path: ../assets/projects/bee-hotel/6.JPG
     title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/7.JPG
+  - image_path: ../assets/projects/bee-hotel/7.JPG
     title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/8.JPG
+  - image_path: ../assets/projects/bee-hotel/8.JPG
     title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/10.jpg
+  - image_path: ../assets/projects/bee-hotel/10.jpg
     title: Wild for Bees
+
+category: "Design-Build"
+client: "Fairmont Hotel and Resorts, Pollinator Partnership Canada, and Burt's Bees"
+date: "June 2014"
+team: "Paul Dowsett, Andrew Stiffman, Joel Anderson (SUSTAINABLE.TO)"
 ---
+<div class="col-md-8">
 
-<p>Rapidly facing population decline, the bee hotels strengthen the urban ecology by providing nesting spaces for solitary bees. For the <a href="http://wildforbees.ca/" target="_blank">Wild for Bees campaign</a>, the structures are built entirely from recycled urban material, while creating a site-specific aesthetic for an educational initiative centered on pollinator health. We wanted to show that bee habitats can be beautiful and easy to build in your own backyard!</p>
+	<p>Rapidly facing population decline, the bee hotels strengthen the urban ecology by providing nesting spaces for solitary bees. For the <a href="http://wildforbees.ca/" target="_blank">Wild for Bees campaign</a>, the structures are built entirely from recycled urban material, while creating a site-specific aesthetic for an educational initiative centered on pollinator health. We wanted to show that bee habitats can be beautiful and easy to build in your own backyard!</p>
 
-<p>As part of the SUSTAINABLE.TO team, I managed the design, build, and installation of the five bee hotels. Most structures were built in collaboration with youth from at-risk neighbourhoods, and travelled to local farmer's markets and neighbourhood events (100in1Day) as part of the educational campaign. In some cases, the construction was integrated into a community workshop to invite the public into the campaign.</p>
+	<p>As part of the SUSTAINABLE.TO team, I managed the design, build, and installation of the five bee hotels. Most structures were built in collaboration with youth from at-risk neighbourhoods, and travelled to local farmer's markets and neighbourhood events (100in1Day) as part of the educational campaign. In some cases, the construction was integrated into a community workshop to invite the public into the campaign.</p>
 
-<p> S.TO was named the 2014 Pollinator Advocate for Canada, and a subsequent project, DIY Backyard Bee Hotels, was one of two winners of the David Suzuki Foundation's Homegrown National Park Design Challenge.</p>
+	<p> S.TO was named the 2014 Pollinator Advocate for Canada, and a subsequent project, DIY Backyard Bee Hotels, was one of two winners of the David Suzuki Foundation's Homegrown National Park Design Challenge.</p>
 
-
-<div class="row">
-	<hr>
-	{% for image in page.images %}
-	<div class="col-md-3 col-sm-6 col-xl-3">
-		<a href="{{ image.image_path }}" data-lightbox="bee-hotel">
-		<img src="{{ image.image_path }}" alt="{{ image.title }}" class="sm-img img-responsive"/>
-		</a>
-	</div>
-	{% endfor %}
-</div>
-
-<hr>
-
-<div class="text-muted">
-	<p><span class="detail">Project Details</span></p>
-	<ul>
-		<li>Completed while employed at SUSTAINABLE.TO Architecture + Building</li>
-		<li>Team: P.DOWSETT (Principal), A.STIFFMAN, J.ANDERSON</li>
-		<li>Locations: Fairmont Royal York Hotel, Toronto Botanical Gardens, Eastview Pollinator Park, Kortright Centre for Conservation, Blackcreek Community Farm, and Fort York National Historic Site </li>
-		<li>All building material was sourced locally as urban waste</li>
-		<li>Built in collaboration with youth participants of the Dixon Hall Mill Centre.</li>
-	</ul>
 	<p><span class="detail">Media</span></p>
 	<ul>
 		<li><a href="http://www.theglobeandmail.com/life/home-and-garden/architecture/condos-for-bees-are-creating-a-buzz/article18989574/" target="_blank">"Condos for bees are creating a buzz"</a> (Globe and Mail, June 2014)</li>
 		<li><a href="https://www.canadianarchitect.com/architecture/homegrown-design-challenge-winners-unveiled-diy-bee-hotels-and-an-alleyway-forest-for-toronto/1003159975/?er=NA" target="_blank">"DIY bee hotels and an alleyway forest for Toronto"</a> (Canadian Architect, July 2014)</li>
 	</ul>
-	<p><span class="detail">Awards</span></p>
-	<ul>
-		<li>Winner, David Suzuki Foundation's Homegrown National Park Design Challenge</li>
-		<li>2014 Pollinator Advocate for Canada</li>
-	</ul>
-</div>
 
+</div>
