--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Jamie Kwan | Experience Design
                     <div class="col-md-7 col-xs-12">
                         <span class="typed"><h1>Great experiences inspire <span class="theme-color">play and curiosity*</span></h1></span>
                         <img src="images/branding-border.png" alt="" class="heading-border">
-                        <p>*As a <strong><a href="http://jamiemkwan.com/profile" class="designer">designer</a> / <a href="http://jamiemkwan.com/profile" class="urbanist">strategist</a> / <a href="http://jamiemkwan.com/profile" class="storyteller">storyteller</a></strong>, I create digital, physical, and often <i>phygital</i> experiences that connect people with messages, stories, and each other.</p>
+                        <p>*As a <strong><a href="http://jamiemkwan.com/profile" class="designer">designer</a> / <a href="http://jamiemkwan.com/profile" class="urbanist">strategist</a> / <a href="http://jamiemkwan.com/profile" class="storyteller">storyteller</a></strong>, I use play as both a process and a medium for engaging with messages, stories, and each other.</p>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@ title: Jamie Kwan | Experience Design
                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 atom-work-item architectural">
-                   <a href="projects/bee-hotel">
+                   <a href="projects/wild-for-bees">
                        <img src="assets/projects/bee-hotel.jpg" alt="" class="img-responsive">
                        <div class="desc text-center">
                            <h5><span>Wild&nbsp;for&nbsp;Bees</span></h5>
