--- a/projects/wild-for-bees.html
+++ b/projects/wild-for-bees.html
@@ -7,6 +7,8 @@ oneliner: "The design of the 5 bee hotels aims at creating location-specific art
 challenge: "For the inaugural year, design and construct five wild bee hotels as part of a national campaign to support pollinator health."
 
 images:
+  - image_path: ../assets/projects/bee-hotel/2.jpg
+    title: Wild for Bees
   - image_path: ../assets/projects/bee-hotel/3.jpg
     title: Wild for Bees
   - image_path: ../assets/projects/bee-hotel/4.jpg
@@ -31,16 +33,15 @@ team: "Paul Dowsett, Andrew Stiffman, Joel Anderson (SUSTAINABLE.TO)"
 ---
 <div class="col-md-8">
 
-	<p>Rapidly facing population decline, the bee hotels strengthen the urban ecology by providing nesting spaces for solitary bees. For the <a href="http://wildforbees.ca/" target="_blank">Wild for Bees campaign</a>, the structures are built entirely from recycled urban material, while creating a site-specific aesthetic for an educational initiative centered on pollinator health. We wanted to show that bee habitats can be beautiful and easy to build in your own backyard!</p>
+	<p>Rapidly facing population decline, the bee hotels strengthen the urban ecology by providing nesting spaces for solitary bees. For the <a href="http://wildforbees.ca/" target="_blank">Wild for Bees campaign</a>, the five structures were sited across the Greater Toronto Area and built entirely from recycled urban material. The design intent created a site-specific aesthetic for the educational initiative centered on pollinator health. We wanted to show that bee habitats can be beautiful and easy to build in your own backyard!</p>
 
-	<p>As part of the SUSTAINABLE.TO team, I managed the design, build, and installation of the five bee hotels. Most structures were built in collaboration with youth from at-risk neighbourhoods, and travelled to local farmer's markets and neighbourhood events (100in1Day) as part of the educational campaign. In some cases, the construction was integrated into a community workshop to invite the public into the campaign.</p>
+	<p>As part of the SUSTAINABLE.TO team, I managed the design, build, and installation of the five bee hotels. Most structures were built in collaboration with youth from at-risk neighbourhoods, and travelled to local farmer's markets and events, such as 100in1Day, as part of the GTA-wide educational campaign. In some cases, the construction was integrated into a community workshop to invite the public into the campaign.</p>
 
-	<p> S.TO was named the 2014 Pollinator Advocate for Canada, and a subsequent project, DIY Backyard Bee Hotels, was one of two winners of the David Suzuki Foundation's Homegrown National Park Design Challenge.</p>
+	<p> S.TO was named the 2014 Pollinator Advocate for Canada, and a subsequent project, DIY Backyard Bee Hotels, was named the winner of the David Suzuki Foundation's Homegrown National Park Design Challenge.</p>
 
-	<p><span class="detail">Media</span></p>
-	<ul>
-		<li><a href="http://www.theglobeandmail.com/life/home-and-garden/architecture/condos-for-bees-are-creating-a-buzz/article18989574/" target="_blank">"Condos for bees are creating a buzz"</a> (Globe and Mail, June 2014)</li>
-		<li><a href="https://www.canadianarchitect.com/architecture/homegrown-design-challenge-winners-unveiled-diy-bee-hotels-and-an-alleyway-forest-for-toronto/1003159975/?er=NA" target="_blank">"DIY bee hotels and an alleyway forest for Toronto"</a> (Canadian Architect, July 2014)</li>
-	</ul>
+	<p>
+	<a href="http://www.theglobeandmail.com/life/home-and-garden/architecture/condos-for-bees-are-creating-a-buzz/article18989574/" target="_blank">"Condos for bees are creating a buzz"</a> (Globe and Mail, June 2014)<br>
+	<a href="https://www.canadianarchitect.com/architecture/homegrown-design-challenge-winners-unveiled-diy-bee-hotels-and-an-alleyway-forest-for-toronto/1003159975/?er=NA" target="_blank">"DIY bee hotels and an alleyway forest for Toronto"</a> (Canadian Architect, July 2014)<br>
+	</p>
 
 </div>
