--- a/projects/thesis.html
+++ b/projects/thesis.html
@@ -2,8 +2,8 @@
 layout: portfolio
 title: Form Follows Narrative
 featureimg: thesis
-slogan: "Thesis: Museums in a Digital Age."
-oneliner: "The proposed interactive exhibit uses both physical space and digital media to allow for visitors to engage with the tangible narratives through all senses, intertwined to encourage a sense of discovery, exploration, and personalized learning. The interactive prototype was built using DIY methods, to allow museums to implement with minimal resources."
+slogan: "Major Research Project:"
+oneliner: "This project saw the design and prototyping of an interactive exhibition that bridged the gap between physical and digital media, to support an overarching storytelling experience."
 challenge: "Design an exhibition interactive that tells the stories embedded within miniature boxwood prayer beads."
 
 images:
@@ -32,18 +32,18 @@ images:
   - image_path: ../assets/projects/thesis/s1.jpg
     title: Thesis
 
-category: "Research"
+category: "Research (Masters of Digital Media, Ryerson University)"
 client: 
 date: "September 2015"
 team: "Dr. Ali Mazalek (Supervisor), Melanie McBride, Daniel Harley, Jean Ho Chu, Oliver Zhang"
 ---
 <div class="col-md-8">
-	<p>The impact of the digital age on the design of architectural spaces seldom speaks of narrative experience. Stories shape our entire lives, and dictate the form architecture takes around us. In fact, architecture can be seen as a physical embodiment of human culture. We’ve largely explored how “digital” enables us to build more freely, more complex and more efficiently, but the experiences in virtual space rarely intersect with that of the physical world. How will architecture truly reflect a social life within the digital age?</p>
+  <p>Architect Eliel Saarinen famously said on the design of architectural spaces, "Always design a thing by considering it in its next larger context: a chair in a room, a room in a house, a house in an environment, an environment in a city plan." In general, this concept has yet to clarify within a digital age. We’ve largely explored how “digital” enables us to build more freely, more complex and more efficiently, but the experiences that intersect virtual space are rarely spoken of within the context of the physical world. The experience of the digital world is seldom reflected in the physical design of spaces.</p>
 
 	<p><img src="../assets/projects/thesis/s3.jpg" alt="Thesis" class="img-responsive"/></p>
 
 
-	<p>This major research looked at the application of physical/digital co-design into an architectural mindset, placing research on a digital urbanism into context with the design of a prototype museum exhibit –– where digital media and exhibit design are starting to see cross-overs in the same design process. The prototypes use multisensory embodied design, translating a digital experience and extending it into the design of the physical space, to create opportunities for visitors to connect more meaningfully with culture. Overall, this project posits that ‘Form Follows Narrative’ –– whether digital or physical.</p>
+	<p>This major research looked at the application of physical/digital co-design into an architectural mindset, placing thinking on a "digital urbanism" into context with the design of a prototype museum exhibit –– where digital media and exhibit design are considered equally as materials on which to constrct the framework for an experience. The prototypes converse between digital projection, sensory materials, and the physical exhibit that encloses it; all in the effort to simply create an interactive storytelling experience. Further, the implementation of such prototype was situated within the considerations of the museum and its resources, both human and organizational. <b>Overall, this thesis posited that ‘Form Follows Narrative’ –– whether digital or physical.</b></p>
 
 	<p>In 2016, the project and co-authored papers were presented, through the Synaesthetic Media Lab at Ryerson and Georgia Tech, at TEI'16 (Eindhoven, NL), MWXX (Los Angeles, US), and DIS'16 (Brisbane, AU).</p>
 
@@ -51,11 +51,10 @@ team: "Dr. Ali Mazalek (Supervisor), Melanie McBride, Daniel Harley, Jean Ho Chu
 		<p align="center"><iframe class="embed-responsive-item" src="https://player.vimeo.com/video/134496066?title=0&byline=0&portrait=0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
 	</div>
 
-	<p><span class="detail">Publications</span></p>
-	<ul>
-		<li>"Sensing History: Contextualizing Artifacts with Sensory Interactions and Narrative Design" (DIS, 2016) - <a href="http://dl.acm.org/citation.cfm?id=2901829" target="_blank">Co-Authored Paper / Demo</a></li>
-	  	<li>"Sensing context: Reflexive Design Principles for Intersensory Museum Interactions" (Museums and the Web, 2016) - <a href="http://mw2016.museumsandtheweb.com/paper/sensing-context-reflexive-design-principles-for-inter-sensory-museum-interactions/" target="_blank">Co-Authored Paper / Presentation</a></li>
-	  	<li>"Grasping Cultural Context through Multisensory Interactions" (TEI Work-in-Progress, 2016) - <a href="http://synlab.ca/papers/kwan_2016_grasping-cultural-context.pdf">Co-Authored Paper / Demo</a></li>
-	</ul>
+	<p><i>
+		"Sensing History: Contextualizing Artifacts with Sensory Interactions and Narrative Design" (DIS, 2016) - <a href="http://dl.acm.org/citation.cfm?id=2901829" target="_blank">Co-Authored Paper / Demo</a></br>
+	  "Sensing context: Reflexive Design Principles for Intersensory Museum Interactions" (Museums and the Web, 2016) - <a href="http://mw2016.museumsandtheweb.com/paper/sensing-context-reflexive-design-principles-for-inter-sensory-museum-interactions/" target="_blank">Co-Authored Paper / Presentation</a></br>
+	  "Grasping Cultural Context through Multisensory Interactions" (TEI Work-in-Progress, 2016) - <a href="http://synlab.ca/papers/paper/70/">Co-Authored Paper / Demo</a><br>
+	</i></p>
 
 </div>
