--- a/projects/wild-for-bees.html
+++ b/projects/wild-for-bees.html
@@ -4,7 +4,7 @@ title: Wild for Bees
 featureimg: bee-hotel
 slogan: "An Educational Initiative for Native and Urban Pollinators."
 oneliner: "The design of the 5 bee hotels aims at creating location-specific artistic gestures that inspire DIY efforts using urban waste. Just like native wild bees – as opposed to honey bees – we created pieces that could be built by the general public, while adding aesthetic value to key locations across the GTA."
-challenge: "For the inaugural year, design and construct five wild bee hotels as part of a national campaign to support pollinator health."
+challenge: "For the inaugural year of a national campaign in support of pollinator health, design and construct five wild bee hotels."
 
 images:
   - image_path: ../assets/projects/bee-hotel/2.jpg
@@ -32,7 +32,6 @@ date: "June 2014"
 team: "Paul Dowsett, Andrew Stiffman, Joel Anderson (SUSTAINABLE.TO)"
 ---
 <div class="col-md-8">
-
 	<p>Rapidly facing population decline, the bee hotels strengthen the urban ecology by providing nesting spaces for solitary bees. For the <a href="http://wildforbees.ca/" target="_blank">Wild for Bees campaign</a>, the five structures were sited across the Greater Toronto Area and built entirely from recycled urban material. The design intent created a site-specific aesthetic for the educational initiative centered on pollinator health. We wanted to show that bee habitats can be beautiful and easy to build in your own backyard!</p>
 
 	<p>As part of the SUSTAINABLE.TO team, I managed the design, build, and installation of the five bee hotels. Most structures were built in collaboration with youth from at-risk neighbourhoods, and travelled to local farmer's markets and events, such as 100in1Day, as part of the GTA-wide educational campaign. In some cases, the construction was integrated into a community workshop to invite the public into the campaign.</p>
