--- a/projects/thesis.html
+++ b/projects/thesis.html
@@ -50,7 +50,7 @@ team: "Dr. Ali Mazalek (Supervisor), Melanie McBride, Daniel Harley, Jean Ho Chu
 
   <p>The prototypes converse between digital projection, sensory materials, and the physical exhibit that encloses it; all in the effort to simply create an interactive storytelling experience. Further, the implementation of such prototype was situated within the considerations of the museum and its resources, both human and organizational. 
 
-  <h5> Overall, this thesis posited that ‘Form Follows Narrative’ –– whether digital or physical.</h5>
+  <b><span class="theme-color">Overall, this thesis posited that ‘Form Follows Narrative’ –– whether digital or physical.</span></b>
 
 	<p>In 2016, the project and co-authored papers were presented, through the Synaesthetic Media Lab at Ryerson and Georgia Tech, at TEI'16 (Eindhoven, NL), MWXX (Los Angeles, US), and DIS'16 (Brisbane, AU).</p>
 
