--- a/projects/thesis.html
+++ b/projects/thesis.html
@@ -42,7 +42,7 @@ team: "Dr. Ali Mazalek (Supervisor), Melanie McBride, Daniel Harley, Jean Ho Chu
 
   <blockquote class="secondary"><i> "Always design a thing by considering it in its next larger context: a chair in a room, a room in a house, a house in an environment, an environment in a city plan." </i></blockquote>
 
-  <p>In general, this concept has yet to clarify within a digital age. We’ve largely explored how “digital” enables us to build more freely, more complex and more efficiently, but the experiences that intersect virtual space are rarely spoken of within the context of the physical world. The experience of the digital world is seldom reflected in the physical design of spaces.</p>
+  <p>In general, this concept has yet to clarify within a digital age. We’ve largely explored how “digital” enables us to build more freely, more complex and more efficiently, but the experiences that intersect virtual space are rarely spoken of within the context of the physical world. <b><span class="theme-color">The experience of the digital world is seldom reflected in the physical design of spaces, and vice versa to the detail of the pixel.</span></b></p>
 
 	<p><img src="../assets/projects/thesis/s3.jpg" alt="Thesis" class="img-responsive"/></p>
 
