--- a/profile.html
+++ b/profile.html
@@ -102,9 +102,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-7 col-xs-12">
-                        <h1>About <span class="theme-color">Me.</span></h1>
+                        <h1><span class="theme-color">Nice to meet you!</span></h1>
                         <img src="images/branding-border.png" alt="" class="heading-border">
-                        <p>Performed suspicion in certainty so frankness by attention pretended. Newspaper or in tolerably education enjoyment. Extremity excellent certainty discourse sincerity no he so resembled.</p>
+                        <p>I'm Jamie Kwan. I'm a designer, a strategist, and a storyteller. I know, I <i>should've</i> made that an alliteration, but let me elaborate on what it is I do, as I truly feel it crosses between all three of those roles.</p>
+                        <p><b><span class="theme-color">I design for play.</span></b> I'm currently working as an Experience Designer at <a href="http://www.forrec.com" target="_blank">FORREC Ltd.</a>, within their Creative Studio. At FORREC, I design physical and digital experiences that allow for people to engage with brand storytelling within entertainment spaces. In a nutshell, I design theme parks, entertainment centers, visitor attractions, and museums that allow guests to connect with stories -- whether brand, fictional, or historical.</p>
+                        <p><b><span class="theme-color">I design with play.</span></b> I'm a big believer in the power of play in unlocking innovation and seeing pain points within the community and the industry in a different light. For this reason, I co-lead Studio Bud: a creative initiative that engages Gen Z youth in design sprint workshops. I facilitate groups of youth to tackle challenges brands and non-profits face in telling their stories. I mean, who better to design with play than actual kids?</p>
+                        <p><b><span class="theme-color">I design through play.</span></b></p>
                     </div>
                 </div>
             </div>
