--- a/profile.html
+++ b/profile.html
@@ -128,6 +128,7 @@
                     <div class="col-md-6 col-xl-6">
                         <div class="copyright">
                             <p>Copyright &copy; 2017 <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Jamie Kwan</a></p>
+                            <p class="footer-github">All pixels made with <i class="fa fa-heart" aria-hidden="true"></i> on <a href="https://github.com/jamiekwan/jamiekwan.github.io" target="_blank">GitHub</a></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-6 text-right">
