--- a/profile.html
+++ b/profile.html
@@ -105,9 +105,50 @@
                         <h1><span class="theme-color">Nice to meet you!</span></h1>
                         <img src="images/branding-border.png" alt="" class="heading-border">
                         <p><b><span class="theme-color">I'm Jamie Kwan.</span></b> I'm a designer, a strategist, and a storyteller. I know, I <i>should've</i> made that an alliteration, but let me elaborate on what it is I do, as I truly feel it crosses between all three of those roles.</p>
-                        <p><b><span class="theme-color">I design for play.</span></b> I'm currently working as an Experience Designer at <a href="http://www.forrec.com" target="_blank">FORREC Ltd.</a>, within their Creative Studio. At FORREC, I design physical and digital experiences that allow for people to engage with brand storytelling within entertainment spaces. In a nutshell, I design theme parks, entertainment centers, visitor attractions, and museums that allow guests to connect with stories -- whether brand, fictional, or historical.</p>
+
+                        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+						  <div class="panel panel-default">
+						    <div class="panel-heading" role="tab" id="headingOne">
+						      <h4 class="panel-title">
+						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">+</a><b><span class="theme-color">I design for play.</span></b>
+						      </h4>
+						    </div>
+						    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+						      <div class="panel-body">
+						        I'm currently working as an Experience Designer at <a href="http://www.forrec.com" target="_blank">FORREC Ltd.</a>, within their Creative Studio. At FORREC, I design physical and digital experiences that allow for people to engage with brand storytelling within entertainment spaces. In a nutshell, I design theme parks, entertainment centers, visitor attractions, and museums that allow guests to connect with stories -- whether brand, fictional, or historical.
+						      </div>
+						    </div>
+						  </div>
+						  <div class="panel panel-default">
+						    <div class="panel-heading" role="tab" id="headingTwo">
+						      <h4 class="panel-title">
+						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">+</a><b><span class="theme-color">I design with play.</span></b>
+						      </h4>
+						    </div>
+						    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+						      <div class="panel-body">
+						        I'm a big believer in the power of play in unlocking innovation and seeing pain points within the community and the industry in a different light. For this reason, I co-lead Studio Bud: a creative initiative that engages Gen Z youth in design sprint workshops. I facilitate groups of youth to tackle challenges brands and non-profits face in telling their stories. I mean, who better to design with play than actual kids?
+						      </div>
+						    </div>
+						  </div>
+						  <div class="panel panel-default">
+						    <div class="panel-heading" role="tab" id="headingThree">
+						      <h4 class="panel-title">
+						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">+</a><b><span class="theme-color">I design through play.</span></b>
+						      </h4>
+						    </div>
+						    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+						      <div class="panel-body">
+						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+						      </div>
+						    </div>
+						  </div>
+						</div>
+<!-- 
+
+                        <p><b><span class="theme-color">I design for play.</span></b> I'm currently working as an Experience Designer at <a href="http://www.forrec.com" target="_blank">FORREC Ltd.</a>, within their Creative Studio. At FORREC, I design physical and digital experiences that allow for people to engage with brand storytelling within entertainment spaces. In a nutshell, I design theme parks, entertainment centers, visitor attractions, and museums that allow guests to connect with stories whether brand, fictional, or historical.</p>
                         <p><b><span class="theme-color">I design with play.</span></b> I'm a big believer in the power of play in unlocking innovation and seeing pain points within the community and the industry in a different light. For this reason, I co-lead Studio Bud: a creative initiative that engages Gen Z youth in design sprint workshops. I facilitate groups of youth to tackle challenges brands and non-profits face in telling their stories. I mean, who better to design with play than actual kids?</p>
-                        <p><b><span class="theme-color">I design through play.</span></b></p>
+                        <p><b><span class="theme-color">I design through play.</span></b></p> -->
                     </div>
                 </div>
             </div>
