--- a/profile.html
+++ b/profile.html
@@ -122,7 +122,7 @@
 						  <div class="panel panel-default">
 						    <div class="panel-heading" role="tab" id="headingTwo">
 						      <h4 class="panel-title">
-						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">+</a><b><span class="theme-color">I design with play.</span></b>
+						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseOne">+</a><b><span class="theme-color">I design with play.</span></b>
 						      </h4>
 						    </div>
 						    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
@@ -134,7 +134,7 @@
 						  <div class="panel panel-default">
 						    <div class="panel-heading" role="tab" id="headingThree">
 						      <h4 class="panel-title">
-						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">+</a><b><span class="theme-color">I design through play.</span></b>
+						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseOne">+</a><b><span class="theme-color">I design through play.</span></b>
 						      </h4>
 						    </div>
 						    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
