--- a/profile.html
+++ b/profile.html
@@ -115,7 +115,7 @@
 						    </div>
 						    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 						      <div class="panel-body">
-						        I'm currently working as an Experience Designer at <a href="http://www.forrec.com" target="_blank">FORREC Ltd.</a>, within their Creative Studio. At FORREC, I design physical and digital experiences that allow for people to engage with brand storytelling within entertainment spaces. In a nutshell, I design theme parks, entertainment centers, visitor attractions, and museums that allow guests to connect with stories -- whether brand, fictional, or historical.
+						        <p>I'm currently working as an Experience Designer at <a href="http://www.forrec.com" target="_blank">FORREC Ltd.</a>, within their Creative Studio. At FORREC, I design physical and digital experiences that allow for people to engage with brand storytelling within entertainment spaces. In a nutshell, I design theme parks, entertainment centers, visitor attractions, and museums that allow guests to connect with stories -- whether brand, fictional, or historical.</p>
 						      </div>
 						    </div>
 						  </div>
