--- a/profile.html
+++ b/profile.html
@@ -14,32 +14,32 @@
 
 
         <!-- ===============    favicon link     =============== -->
-        <link rel="icon" type="image/png" href="../assets/favicon-jk.ico" />
+        <link rel="icon" type="image/png" href="assets/favicon-jk.ico" />
 
         <!-- ===============    Bootstrap core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" media="all" />
-        <link rel="stylesheet" type="text/css" href="../css/BootstrapXL.css" />
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="css/BootstrapXL.css" />
 
         <!-- ===============    font-awesome core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" media="all" />
 
         <!-- ===============    theme core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="../css/effect1.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="css/effect1.css" media="all" />
 
         <!-- ===============    theme core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="../css/theme.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="css/theme.css" media="all" />
 
         <!-- ===============    responsive core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="../css/responsive.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="css/responsive.css" media="all" />
 
         <!-- ===============    spacing core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="../css/spacing.min.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="css/spacing.min.css" media="all" />
 
         <!-- ===============    theme content color core CSS     =============== -->
-        <link rel="stylesheet" type="text/css" href="../css/theme-content-color/blue.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="css/theme-content-color/blue.css" media="all" />
 
         <!-- ===============    Lightbox CSS    =============== -->        
-        <link rel="stylesheet" href="../css/lightbox.css"> 
+        <link rel="stylesheet" href="css/lightbox.css"> 
 
 
         <!-- ===============    Google fonts CSS     =============== -->
@@ -75,8 +75,8 @@
                 <div class="container">
                     <header>
                         <div class="logo">
-                            <a href="../index.html">
-                                <img src="../assets/logo.png" width=300px alt="Jamie Kwan">
+                            <a href="index.html">
+                                <img src="assets/logo.png" width=300px alt="Jamie Kwan">
                             </a>
                         </div>
                         <div class="mobile-menu">
@@ -85,8 +85,8 @@
                         <nav>
                             <ul>
                                 <li><a href="http://www.jamiemkwan.com">Work</a></li>
-                                <li class="active"><a href="../profile.html">Profile</a></li>
-                                <!-- <li><a href="../blog.html">Blog</a></li> -->
+                                <li class="active"><a href="profile.html">Profile</a></li>
+                                <!-- <li><a href="blog.html">Blog</a></li> -->
                                 <li><a href="mailto:jamie@studiobud.ca?subject=Hello!">Contact</a></li>
                             </ul>
                         </nav>
@@ -156,7 +156,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="about-fullimg fixed-bg" data-background="images/about_me.jpg" data-stellar-background-ratio="0.5"></div>
+                    <div class="about-fullimg fixed-bg" data-background="assets/jkwan.jpg" data-stellar-background-ratio="0.5"></div>
                 </div>
             </div>
         </div>
@@ -193,42 +193,42 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.11.3.min.js"><\/script>')</script>
         <!-- ===============    Bootstrap core jquery     =============== -->
-        <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
         <!-- ===============    modernizr core jquery     =============== -->
-        <script type="text/javascript" src="../js/modernizr.custom.js"></script>
+        <script type="text/javascript" src="js/modernizr.custom.js"></script>
 
         <!-- ===============    classie core jquery     =============== -->
-        <script type="text/javascript" src="../js/classie.js"></script>
+        <script type="text/javascript" src="js/classie.js"></script>
 
         <!-- ===============    pathLoader core jquery     =============== -->
-        <script type="text/javascript" src="../js/pathLoader.js"></script>
+        <script type="text/javascript" src="js/pathLoader.js"></script>
 
         <!-- ===============    imagesloaded core jquery     =============== -->
-        <script type="text/javascript" src="../js/imagesloaded.pkgd.min.js"></script>
+        <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
         
         <!-- ===============    maps api core JavaScript     =============== -->
         <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>
 
         <!-- ===============    stellar core jquery     =============== -->
-        <script type="text/javascript" src="../js/jquery.stellar.min.js"></script>
+        <script type="text/javascript" src="js/jquery.stellar.min.js"></script>
 
         <!-- ===============    smooth core jquery     =============== -->
-        <script type="text/javascript" src="../js/smooth.js"></script>
+        <script type="text/javascript" src="js/smooth.js"></script>
 
         <!-- ===============    isotope core jquery     =============== -->
-        <script type="text/javascript" src="../js/isotopoe.pkgd.min.js"></script>
+        <script type="text/javascript" src="js/isotopoe.pkgd.min.js"></script>
 
         <!-- ===============    masonary core jquery     =============== -->
-        <script type="text/javascript" src="../js/masonary.min.js"></script>
+        <script type="text/javascript" src="js/masonary.min.js"></script>
 
         <!-- ===============    ROW JavaScript Plugins    =============== -->
-        <script type="text/javascript" src="../js/row-plugins.js"></script>
+        <script type="text/javascript" src="js/row-plugins.js"></script>
 
         <!-- ===============    Active core JavaScript     =============== -->
-        <script type="text/javascript" src="../js/active.js"></script>
+        <script type="text/javascript" src="js/active.js"></script>
 
         <!-- ===============    Lightbox JavaScript     =============== -->
-        <script src="../js/lightbox.js"></script>
+        <script src="js/lightbox.js"></script>
     </body>
 </html>
