--- a/profile.html
+++ b/profile.html
@@ -101,27 +101,27 @@
         <div class="page-title">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-8 col-md-8 col-xs-12">
-                        <h1><span class="theme-color">Nice to meet you!</span></h1>
+                    <div class="col-xl-9 col-md-9 col-xs-12">
+                        <h1>About<span class="theme-color"> Me</span></h1>
                         <img src="images/branding-border.png" alt="" class="heading-border">
-                        <p><b><span class="theme-color">I'm Jamie Kwan.</span></b> I'm a designer, a strategist, and a storyteller. I know, I <i>should've</i> made that an alliteration, but let me elaborate on what it is I do, as I truly feel it crosses between all three of those roles.</p>
+                        <p><b><span class="theme-color">I'm a designer, a strategist, and a storyteller.</span></b>  I know, I <i>should've</i> made that an alliteration, but let me elaborate on what it is I do, as I truly feel it crosses between all three of those roles. From a creative lens, I aim to use design to spark imagination in consideration of strategic goals and brand storytelling. Naturally, the idea of "play" has become central in my career thus far.</p>
 
                         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						  <div class="panel panel-default">
 						    <div class="panel-heading" role="tab" id="headingOne">
-						      <h4 class="panel-title">
-						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">+</a><b><span class="theme-color">I design for play.</span></b>
+						      <h4>
+						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne"><b><span class="theme-color">I design for play.</span></b>&nbsp;&nbsp;&nbsp;<i class="fa fa-plus" aria-hidden="true"></i></a>
 						      </h4>
 						    </div>
 						    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 						      <div class="panel-body">
-						        <p>I'm currently working as an Experience Designer at <a href="http://www.forrec.com" target="_blank">FORREC Ltd.</a>, within their Creative Studio. At FORREC, I design physical and digital experiences that allow for people to engage with brand storytelling within entertainment spaces. In a nutshell, I design theme parks, entertainment centers, visitor attractions, and museums that allow guests to connect with stories -- whether brand, fictional, or historical.</p>
+						        <p>I'm currently working as an Experience Designer at <a href="http://www.forrec.com" target="_blank">FORREC Ltd.</a>, within their Creative Studio. There, I help with developing the look and feel of architectural projects. I design physical and digital experiences that allow for people to engage with brand storytelling within entertainment spaces. In a nutshell, I design theme parks, entertainment centers, visitor attractions, and museums that allow guests to connect with stories -- whether brand, fictional, or historical.</p>
 						      </div>
 						    </div>
 						  </div>
 						  <div class="panel panel-default">
 						    <div class="panel-heading" role="tab" id="headingTwo">
-						      <h4 class="panel-title">
+						      <h4>
 						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseOne">+</a><b><span class="theme-color">I design with play.</span></b>
 						      </h4>
 						    </div>
@@ -133,7 +133,7 @@
 						  </div>
 						  <div class="panel panel-default">
 						    <div class="panel-heading" role="tab" id="headingThree">
-						      <h4 class="panel-title">
+						      <h4>
 						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseOne">+</a><b><span class="theme-color">I design through play.</span></b>
 						      </h4>
 						    </div>
@@ -144,11 +144,6 @@
 						    </div>
 						  </div>
 						</div>
-<!-- 
-
-                        <p><b><span class="theme-color">I design for play.</span></b> I'm currently working as an Experience Designer at <a href="http://www.forrec.com" target="_blank">FORREC Ltd.</a>, within their Creative Studio. At FORREC, I design physical and digital experiences that allow for people to engage with brand storytelling within entertainment spaces. In a nutshell, I design theme parks, entertainment centers, visitor attractions, and museums that allow guests to connect with stories whether brand, fictional, or historical.</p>
-                        <p><b><span class="theme-color">I design with play.</span></b> I'm a big believer in the power of play in unlocking innovation and seeing pain points within the community and the industry in a different light. For this reason, I co-lead Studio Bud: a creative initiative that engages Gen Z youth in design sprint workshops. I facilitate groups of youth to tackle challenges brands and non-profits face in telling their stories. I mean, who better to design with play than actual kids?</p>
-                        <p><b><span class="theme-color">I design through play.</span></b></p> -->
                     </div>
                 </div>
             </div>
