--- a/profile.html
+++ b/profile.html
@@ -115,7 +115,7 @@
 						    </div>
 						    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 						      <div class="panel-body">
-						        <p>I currently work with theme parks and visitor attractions, as a Designer in the Creative Studio at <a href="http://www.forrec.com" target="_blank">FORREC Ltd.</a>. There, I help with developing the look and feel of architectural projects. I design physical and digital experiences that allow for people to engage with brand storytelling within entertainment spaces. <b><span class="theme-color">In a nutshell, I design experiences that allow guests to connect with stories -- whether brand, fictional, or historical.</span></b></p>
+						        <p>I currently work in entertainment design, as an Experience Designer at <a href="http://www.forrec.com" target="_blank">FORREC Ltd</a>. There, I help with developing the look and feel of theme parks and visitor attractions. I design physical and digital moments that allow for people to engage with brand storytelling within these entertainment spaces. <b><span class="theme-color">In a nutshell, I design experiences that allow guests to connect with stories -- whether brand, fictional, or historical.</span></b></p>
 						      </div>
 						    </div>
 						  </div>
