--- a/profile.html
+++ b/profile.html
@@ -110,7 +110,7 @@
 						  <div class="panel panel-default">
 						    <div class="panel-heading" role="tab" id="headingOne">
 						      <h4>
-						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne"><b><span class="theme-color">I design for play.</span></b>&nbsp;&nbsp;&nbsp;<i class="fa fa-plus" aria-hidden="true"></i></a>
+						        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne"><b><span class="theme-color">I design for play</span></b>&nbsp;&nbsp;&nbsp;<i class="fa fa-plus" aria-hidden="true"></i></a>
 						      </h4>
 						    </div>
 						    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
@@ -122,7 +122,7 @@
 						  <div class="panel panel-default">
 						    <div class="panel-heading" role="tab" id="headingTwo">
 						      <h4>
-						        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"><b><span class="theme-color">I design with play.</span></b>&nbsp;&nbsp;&nbsp;<i class="fa fa-plus" aria-hidden="true"></i></a>
+						        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"><b><span class="theme-color">I design with play</span></b>&nbsp;&nbsp;&nbsp;<i class="fa fa-plus" aria-hidden="true"></i></a>
 						      </h4>
 						    </div>
 						    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
@@ -134,7 +134,7 @@
 						  <div class="panel panel-default">
 						    <div class="panel-heading" role="tab" id="headingThree">
 						      <h4>
-						        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"><b><span class="theme-color">I design with play.</span></b>&nbsp;&nbsp;&nbsp;<i class="fa fa-plus" aria-hidden="true"></i></a>
+						        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"><b><span class="theme-color">I design with play</span></b>&nbsp;&nbsp;&nbsp;<i class="fa fa-plus" aria-hidden="true"></i></a>
 						      </h4>
 						    </div>
 						    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
