--- a/profile.html
+++ b/profile.html
@@ -104,7 +104,7 @@
                     <div class="col-xl-9 col-md-9 col-xs-12">
                         <h1>About<span class="theme-color"> Me</span></h1>
                         <img src="images/branding-border.png" alt="" class="heading-border">
-                        <p><b><span class="theme-color">I'm a designer, a strategist, and a storyteller.</span></b>  I know, I <i>should've</i> made that an alliteration, but let me elaborate on what it is I do, as I truly feel it crosses between all three of those roles. From a creative lens, I aim to use design to spark imagination in consideration of strategic goals and brand storytelling. Naturally, the idea of "play" has become central in my career thus far.</p>
+                        <p><b><span class="theme-color">I'm a designer, a strategist, and a storyteller.</span></b>  I know, I <i>should've</i> made that an alliteration, but let me elaborate on what it is I do, as I truly feel it crosses between all three of those roles. From a creative lens, I aim to use design to spark imagination in consideration of strategic goals and brand storytelling. <b><span class="theme-color">Naturally, the idea of "play" has become central in my career thus far.</span></b></p>
                         <br>
                         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						  <div class="panel panel-default">
@@ -115,7 +115,7 @@
 						    </div>
 						    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 						      <div class="panel-body">
-						        <p>I currently work in entertainment design, as an Experience Designer at <a href="http://www.forrec.com" target="_blank">FORREC Ltd</a>. There, I help with developing the look and feel of theme parks and visitor attractions. I design physical and digital moments that allow for people to engage with brand storytelling within these entertainment spaces. <b><span class="theme-color">In a nutshell, I design experiences that allow guests to connect with stories -- whether brand, fictional, or historical.</span></b></p>
+						        <p>I currently work in entertainment design, as an Experience Designer at <a href="http://www.forrec.com" target="_blank">FORREC Ltd</a>. There, I help with developing the look and feel of theme parks and visitor attractions. I design physical and digital moments that allow for people to engage with brand storytelling within these entertainment spaces. <b><span class="theme-color">In a nutshell, I design experiences that allow guests to connect with stories &mdash; whether brand, fictional, or historical.</span></b></p>
 						      </div>
 						    </div>
 						  </div>
@@ -127,19 +127,19 @@
 						    </div>
 						    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 						      <div class="panel-body">
-						        I'm a big believer in the power of play in unlocking innovation and seeing pain points within the community and the industry in a different light. For this reason, I co-lead Studio Bud: a creative initiative that engages Gen Z youth in design sprint workshops. I facilitate groups of youth to tackle challenges brands and non-profits face in telling their stories. I mean, who better to design with play than actual kids?
+						        <p>I'm a big believer in the power of play in unlocking innovation and seeing pain points within the community and the industry in a different light. For this reason, I co-lead Studio Bud: a creative initiative that engages Gen Z youth in design sprint workshops. I facilitate groups of youth to tackle challenges brands and non-profits face in telling their stories. I mean, who better to design with play than actual kids?</p>
 						      </div>
 						    </div>
 						  </div>
 						  <div class="panel panel-default">
 						    <div class="panel-heading" role="tab" id="headingThree">
 						      <h4>
-						        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"><b><span class="theme-color">I design with play</span></b>&nbsp;&nbsp;&nbsp;<i class="fa fa-plus" aria-hidden="true"></i></a>
+						        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"><b><span class="theme-color">I design through play</span></b>&nbsp;&nbsp;&nbsp;<i class="fa fa-plus" aria-hidden="true"></i></a>
 						      </h4>
 						    </div>
 						    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 						      <div class="panel-body">
-						        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+						        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</p>
 						      </div>
 						    </div>
 						  </div>
@@ -149,9 +149,14 @@
             </div>
         </div>
         <div class="container">
-            <div class="row">
+            <div class="row" id="desktop-only">
                 <div class="col-md-12">
                     <div class="about-fullimg fixed-bg" data-background="assets/jkwan.jpg" data-stellar-background-ratio="0.5"></div>
+                </div>
+            </div>
+            <div class="row featureimg-mobile" id="mobile-only">
+                <div class="col-xl-12 col-m-12 col-sm-12 col-xs-12">
+                    <img src="assets/jkwan.jpg" class="img-responsive" vspace="50">
                 </div>
             </div>
         </div>
