--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@ title: Jamie Kwan | Experience Design & Strategy
 
 					<div class="col-sm-12 col-md-6 col-md-offset-6 col-bg">
 
-						<h2 class="module-title font-alt">About</h2>
+						<h2 class="module-title font-alt">Jamie Kwan</h2>
 
 						<div class="module-subtitle font-inc">
-							I'm a designer / strategist / storyteller on a mission to create truly meaningful experiences in the built environment. 
+							DESIGNER | STRATEGIST | STORYTELLER 
 						</div>
 
 						<p>The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.</p>
