--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 		<div class="hs-caption container">
 			<div class="caption-content">
-				<div class="hs-title-size-1 font-inc text-uppercase m-b-20">
+				<div class="hs-title-size-1 font-inc text-uppercase m-b-20 wow fadeInUp">
 					Hi, my name is Jamie.
 				</div>
 				<div class="hs-title-size-3 font-alt">
@@ -254,7 +254,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 					<div class="col-sm-12 col-md-6 col-md-offset-6 col-bg">
 
-						<h2 class="module-title font-alt">Jamie Kwan</h2>
+						<h2 class="module-title font-alt">My Story</h2>
 
 						<div class="module-subtitle font-inc">
 							DESIGNER | STRATEGIST | STORYTELLER 
