test project detail adjustments

--- a/ad-astra.html
+++ b/ad-astra.html
@@ -1,5 +1,6 @@
 ---
 layout: portfolio
+color: red
 title: Ad Astra
 featureimg: ad-astra
 slogan: "Sic itur ad astra: 'thus you shall go to the stars'."
@@ -20,9 +21,7 @@ images:
   - image_path: ../assets/projects/ad-astra/4.jpg
     title: Ad Astra
 
-category: "Interactive Exhibition"
 client: "Bata Shoe Museum / Nuit Blanche"
 date: "March - October 2013"
-team: "Neveen Abdel-Aal, Ryan Giuricich, Kevin Pu, Helena Skoneiczna, Setareh Shams, Sandra Wojteki, Marcelle Longlade (Software Engineer), Jesse Allen (Sound Engineer), Michael Tai (Musician)"
 
 ---
