--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				<!-- PORTFOLIO ITEM -->
 				<li class="work-item exhibition">
-					<a href="#">
+					<a href="/ad-astra">
 						<div class="work-image">
 							<img src="assets/images/projects/ad-astra.jpg" alt="">
 						</div>
