--- a/ad-astra.html
+++ b/ad-astra.html
@@ -1,6 +1,6 @@
 ---
 layout: portfolio
-color: red
+color: blue
 title: Ad Astra
 oneliner: "How might we transform a small lunchroom into a temporary night-time destination?"
 
