--- a/ad-astra.html
+++ b/ad-astra.html
@@ -1,6 +1,6 @@
 ---
 layout: portfolio
-color: #016FB9
+color: "rgb(1,111,185)"
 title: Ad Astra
 oneliner: "How might we transform a small lunchroom into a temporary night-time destination?"
 
