--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ title: Jamie Kwan | Experience Design & Strategy
 		<!-- /PORTFOLIO -->
 
 		<!-- ABOUT -->
-		<section class="module p-t-0 p-b-0 bg-dark-50" data-background="assets/images/background/IMG_1782.jpg">
+		<section class="module p-t-0 p-b-0" data-background="assets/images/background/IMG_1782.jpg">
 
 			<div class="container-fluid">
 
