--- a/ad-astra.html
+++ b/ad-astra.html
@@ -21,8 +21,9 @@ images:
 client: "Bata Shoe Museum / Nuit Blanche"
 date: "March - October 2013"
 
-next:"../sandbox"
-prev: "../creative-catalyst"
+pagination
+  - next_path:../sandbox
+  - prev_path: ../creative-catalyst
 
 ---
 
