--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Jamie Kwan | Experience Design & Strategy
 	<!-- HOME -->
 	<section id="home" class="module-hero module-parallax module-fade bg-dark-50" data-background="assets/images/background/vitaliy-paykov-373314-unsplash.jpg">
 
-		<div class="hs-caption container col-xl-8">
+		<div class="hs-caption container col-xl-8 col-xl-offset-2">
 			<div class="caption-content">
 				<div class="hs-title-size-1 font-inc text-uppercase m-b-20">
 					Hi, my name is Jamie.
